force-app/main/default/objects/NEO_Variable__c/NEO_Variable__c.object-meta.xml
<CustomObject>
    <description>For rule engine</description>
    <label>NEO Variable</label>
    <nameField>
        <displayFormat>V-{00000000}</displayFormat>
        <label>NEO Variable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>