force-app/main/default/objects/NEO_Variable__c/fields/Is_Master_Object__c.field-meta.xml
<CustomField>
    <fullName>Is_Master_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Master Object</label>
    <type>Checkbox</type>
</CustomField>