force-app/main/default/objects/NEO_Variable__c/fields/NEO_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>NEO_Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEO_User_Accumulated__c</fullName>
                <label>User Accumulated</label>
            </value>
            <value>
                <fullName>NEO_Speaker_Accumulated__c</fullName>
                <label>Speaker Accumulated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>