force-app/main/default/objects/NEO_Variable__c/fields/NEO_Value_Key__c.field-meta.xml
<CustomField>
    <fullName>NEO_Value_Key__c</fullName>
    <label>Value Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>{0}__{1}</fullName>
                <label>By Fiscal Year</label>
            </value>
            <value>
                <fullName>{0}__{1}{2}</fullName>
                <label>By Fiscal Quarter</label>
            </value>
            <value>
                <fullName>{0}__{1}{2}{3}</fullName>
                <label>By Fiscal Month</label>
            </value>
            <value>
                <fullName>{0}__{1}{2}{3}__{4}</fullName>
                <label>By Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>