force-app/main/default/objects/NEO_Variable__c/fields/NEO_Variable_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>NEO_Variable_Data_Type__c</fullName>
    <label>Variable Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
            <value>
                <fullName>Lookup(Account)</fullName>
            </value>
            <value>
                <fullName>Lookup(EM_Speaker_vod__c)</fullName>
            </value>
            <value>
                <fullName>Lookup(Speaker_vod__c)</fullName>
            </value>
            <value>
                <fullName>Lookup(User)</fullName>
            </value>
            <value>
                <fullName>Multipicklist</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>