force-app/main/default/objects/NEO_Variable__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <formula>Parent_Variable__r.Variable_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Name</label>
    <type>Text</type>
</CustomField>