force-app/main/default/objects/NEO_Variable__c/fields/Parent_Variable__c.field-meta.xml
<CustomField>
    <fullName>Parent_Variable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Variable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NEO_Variable__c.Type__c</field>
            <operation>equals</operation>
            <value>Object</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NEO_Variable__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>NEO_Variables</relationshipName>
    <type>Lookup</type>
</CustomField>