force-app/main/default/objects/NEO_Variable__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>