force-app/main/default/objects/NEO_Variable__c/fields/Variable_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Variable_API_Name__c</fullName>
    <label>Variable API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>