force-app/main/default/objects/NEO_Variable__c/fields/Variable_Label__c.field-meta.xml
<CustomField>
    <fullName>Variable_Label__c</fullName>
    <label>Variable Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>