force-app/main/default/objects/NEO_Variable__c/recordTypes/NEO_Field_Variable.recordType-meta.xml
<RecordType>
    <fullName>NEO_Field_Variable</fullName>
    <active>true</active>
    <description>Create field type variable</description>
    <label>Field Variable</label>
</RecordType>