force-app/main/default/objects/NEO_Variable__c/recordTypes/NEO_Object_Variable.recordType-meta.xml
<RecordType>
    <fullName>NEO_Object_Variable</fullName>
    <active>true</active>
    <description>Create object type variable</description>
    <label>Object Variable</label>
</RecordType>