force-app/main/default/objects/NEO_Variable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Variable_Label__c</columns>
    <columns>Variable_API_Name__c</columns>
    <columns>Is_Master_Object__c</columns>
    <columns>NEO_Active__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NEO_Variable__c.NEO_Object_Variable</value>
    </filters>
    <label>All</label>
</ListView>